Perma-freeze recovery attempt